--- a/project 1/2.html
+++ b/project 1/2.html
@@ -3,27 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Game</title>
+	<title>Товар</title>
 	<link href="адрес_файла_стилей.css" rel="stylesheet" href="outlines.css" >
 	<style>
 		body{
-			background:  url(images/a1212257cbfcabd88c81054c67b4df01.jpg);
+			background-color:rgb(197, 163, 219);
 		}
 	</style>
 </head>
 <body>
-	<h1><a href="catalog.html">The elder scrols 5:Skyrim</a></h1>
+	<h1><a href="catalog.html">Abercrombie & Fitch Fitch First Instinct Blue For Her</a></h1>
 	<p><b>Полное описание:<b></p>
+		<p>
+			<img src="images/20951_1.jpg"
+		</p>
 
-	<p><b>Это пятая часть в серии The Elder Scrolls. Игра была выпущена 11 ноября 2011 года для Windows, Playstation 3 и Xbox 360.
-		 Для игры были выпущены три загружаемых дополнения под названиями Dawnguard, Hearthfire и Dragonborn, позже объединённых в издании The Elder Scrolls V: Skyrim — Legendary Edition.
-		  Осенью 2016 года было выпущено переиздание для Windows, Playstation 4 и Xbox One, включающее в себя те же дополнения, обновленную графику и поддержку пользовательских модификаций.
-
-		Подобно предыдущим играм серии, Skyrim предоставляет игроку возможность свободно путешествовать по обширному игровому миру, исследуя его и самостоятельно находя новые места и задания. 
-		Действие Skyrim происходит в вымышленной провинции Скайрим на материке Тамриэль на планете Нирн спустя двести лет после событий предыдущей игры серии — The Elder Scrolls IV: Oblivion.
-		 Основная сюжетная линия игры связана с появлением в Скайриме могущественного дракона Алдуина; на главного героя, «Драконорождённого», возложена задача остановить возвращение драконов и сразить Алдуина.
-		
-		Игра получила высокие оценки критиков и собрала ряд наград, в том числе звания лучшей игры 2011 года Spike Video Game Award, звания «Игры года» и «Ролевой игры года» от IGN и Gamespot. 
-		Ей также сопутствовал коммерческий успех: на 2014 год число проданных во всем мире копий игры превысило 20 миллионов, а к ноябрю 2016 — уже 30 миллионов.</b></p>
+	<p><b>Упакованный в стиль, аккуратный, элегантный флакон нежно-голубого оттенка, аромат Abercrombie & Fitch Fitch First Instinct Blue For Her отличается невероятной свежестью и благородным, шипровым звучанием.
+		 Каждая его капля словно рассказывает о добродушном, милом характере его обладательницы, подчеркивает ее открытость всему миру и неизменно позитивный жизненный настрой.
+		  Презентация новинки состоялась в 2018 году, и уже через несколько месяцев эликсир украсил полки сотен утонченных, женственных представительниц прекрасной половины человечества из разных уголков земного шара.
+			Парфюмерный треугольник открывается ягодными мотивами спелой, сочной ежевики, которая изумительно сочетается с цитрусовой свежестью зеленого бергамота. 
+			Каменная соль, растворенная в воздушных нотах, подчеркивает особенную характерность и смелость запаха. Сердце пирамиды представлено цветочными мотивами белоснежного жасмина, чье чарующее благоухание как нельзя лучше оттеняется фруктовыми аккордами спелого абрикоса. 
+			Душистый пион плавно перетекает в базу композиции, где соединяется с классическими, древесными акцентами восточного сандала. 
+			Легкая горчинка смолистых пачулей составляет идеальный дуэт со сладкой ванилью, завершая невероятную картину.
+			 Аромат Abercrombie & Fitch Fitch First Instinct Blue For Her будет прекрасно смотреться в лучах солнечного света.</b></p>
 </body>
 </html>
