--- a/project 1/index.html
+++ b/project 1/index.html
@@ -7,12 +7,12 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Каталог игр</title>
+	<title>Каталог</title>
 
 	<style>
 
 footer{
-background-color: #212121;
+background-color: #ca86db;
 color: #fff;
 font-size:22px;
 position: absolute;
@@ -23,7 +23,7 @@ height: 5%;
 }
 
 		body{
-	background-color:aliceblue;
+	background-color:rgb(197, 163, 219);
 		}
 
 	</style>
@@ -32,7 +32,7 @@ height: 5%;
 
 <body>
 	<header>
-		<h1>Store </h1>
+		<h1>Л'Этуаль </h1>
 	</header>
 	<ul>
 	<b><li><a href="catalog.html">Каталог</a></li></b>
@@ -42,7 +42,7 @@ height: 5%;
 	
 		</form>
 		<hr/>
-	<h1 class="greetins">Приветствую вас в моём магазине игр</h1>
+	<h1>Приветствую вас в моём магазине </h1>
 
 
 
