--- a/project 1/catalog.html
+++ b/project 1/catalog.html
@@ -7,42 +7,43 @@
 	 <link link rel="stylesheet" href="style.css" type="text/css">
 	 <style>
 body{
-	background-color:aliceblue;
+	background-color:rgb(197, 163, 219);
 		}
 		 footer{
-background-color: #212121;
+background-color: #c38dca;
 color: #fff;
 font-size:22px;
 position: absolute;
 left: 0;
 bottom: 0;
 width: 100%;
-height: 5%;
+height: 2%;
 }
 	 </style>
 </head>
 <body>	 
 	 <header>
-		<h1>Store </h1>
+		<h1>Л'Этуаль</h1>
 	</header>
 	<li><a href="index.html" index="Game"><b>Главная</b></a></li>
 	<li><a href="contacts.html" index="Game"><b>Контакты</b></a></li>
 	</ul>
 	<form action="">
 		</form>
-		<h1><a href="1.html"> Animal Crossing: New Horizons</a></h1>
-		<p><img src="images/270px-Animal_Crossing_Logo.png" 
-		</p> 
+		<h1><a href="1.html"> Abercrombie & Fitch First Instinct For Her</a></h1>
+		<p><img src="images/18104_large.jpg"> </p> 
 	<br/>	<b> краткое описание:</b>
 	 <p>
-		серия видеоигр в жанре симулятор жизни, разработанная и выпущенная японской компанией Nintendo и созданная японским геймдизайнером Кацуя Эгут.
+		Год выпуска:2017
+		Группа ароматов:цветочные , фруктовые
 	 </p>
-	 <h1><a href="2.html">the elder scrols 5:Skyrim</a></h1>
-		<p><img src="images/274px-The_Elder_Scrolls_V_-_Skyrim.jpg" 
+	 <h1><a href="2.html">Abercrombie & Fitch Fitch First Instinct Blue For Her</a></h1>
+		<p><img src="images/20951_large.jpg" >
 		</p>
 	<br/>	<b> краткое описание:</b>
 	 <p>
-		мультиплатформенная компьютерная ролевая игра с открытым миром, разработанная студией Bethesda Game Studios и выпущенная компанией Bethesda Softworks.
+		Год выпуска:2018
+Группа ароматов:шипровые цветочные
 	 </p>
 	 </p>
 		<footer>
